--- a/src/Modules/MasterModule/Views/CommissionAgentControlView.xaml
+++ b/src/Modules/MasterModule/Views/CommissionAgentControlView.xaml
@@ -12,7 +12,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <karveGrid:KarveGridView x:Name="CommissionAgentSummary" PageSize="25" Grid.IsSharedSizeScope="True"
-                                     Height="800"  ReadOnly="True" ColumnWidth="100" SourceView="{Binding SummaryView}">
+                                      ReadOnly="True" ColumnWidth="100" SourceView="{Binding SummaryView}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="RowMouseDoubleClick">
                         <i:InvokeCommandAction Command="{Binding OpenItem}" CommandParameter="{Binding ElementName=CommissionAgentSummary, Path=SelectedRow}"/>
