--- a/src/Modules/MasterModule/Views/ProvidersControl.xaml
+++ b/src/Modules/MasterModule/Views/ProvidersControl.xaml
@@ -22,9 +22,9 @@
 
 
     <Grid>
-          <ScrollViewer>
+      
                 <karveGrid:KarveGridView x:Name="ProviderSupplierSummary" PageSize="25" Grid.IsSharedSizeScope="True"
-                                                Height="800"  ReadOnly="True" ColumnWidth="100" SourceView="{Binding SummaryView}">
+                                                 ReadOnly="True" ColumnWidth="100" SourceView="{Binding SummaryView}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="RowMouseDoubleClick">
                         <i:InvokeCommandAction Command="{Binding OpenItem}" CommandParameter="{Binding ElementName=ProviderSupplierSummary, Path=SelectedRow}"/>
@@ -33,7 +33,7 @@
 
                 
                 </karveGrid:KarveGridView>
-        </ScrollViewer>
+       
     </Grid>
 
 </UserControl>
