--- a/src/Modules/MasterModule/Views/VehiclesControlView.xaml
+++ b/src/Modules/MasterModule/Views/VehiclesControlView.xaml
@@ -13,7 +13,7 @@
     <Grid>
         
         <karveGrid:KarveGridView x:Name="VehiclesSummary" PageSize="25" Grid.IsSharedSizeScope="True"
-                                 Height="800"  ReadOnly="True" ColumnWidth="100" SourceView="{Binding SummaryView}">
+                                   ReadOnly="True" ColumnWidth="100" SourceView="{Binding SummaryView}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="RowMouseDoubleClick">
                     <i:InvokeCommandAction Command="{Binding OpenItem}" CommandParameter="{Binding ElementName=VehiclesSummary, Path=SelectedRow}"/>
