--- a/src/App.xaml
+++ b/src/App.xaml
@@ -6,40 +6,42 @@
              xmlns:vm="clr-namespace:KarveCar.ViewModels"
              xmlns:mainwindow="clr-namespace:KarveCar.ViewModels"
              xmlns:converter="clr-namespace:KarveCommon.Converter;assembly=KarveCommon"
+             xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
              xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz">
     <Application.Resources>
         <ResourceDictionary>
+            
             <ResourceDictionary.MergedDictionaries>
                     <!-- primary color -->
                     <ResourceDictionary>
                         <!-- include your primary palette -->
-                        <ResourceDictionary.MergedDictionaries>
-                            <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
-                        </ResourceDictionary.MergedDictionaries>
-                        <!--
-                            include three hues from the primary palette (and the associated forecolours).
-                            Do not rename, keep in sequence; light to dark.
-                        -->
-                        
-                        
-                        <SolidColorBrush x:Key="PrimaryHueLightBrush" Color="{StaticResource Primary100}"/>
-                        <SolidColorBrush x:Key="PrimaryHueLightForegroundBrush" Color="{StaticResource Primary100Foreground}"/>
-                        <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="{StaticResource Primary500}"/>
-                        <SolidColorBrush x:Key="PrimaryHueMidForegroundBrush" Color="{StaticResource Primary500Foreground}"/>
-                        <SolidColorBrush x:Key="PrimaryHueDarkBrush" Color="{StaticResource Primary700}"/>
-                        <SolidColorBrush x:Key="PrimaryHueDarkForegroundBrush" Color="{StaticResource Primary700Foreground}"/>
-                    </ResourceDictionary>
 
-                    <!-- secondary colour -->
+
+                    <ResourceDictionary.MergedDictionaries>
+                            <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Blue.Primary.xaml" />
+                    
+                    </ResourceDictionary.MergedDictionaries>
+
+                        <SolidColorBrush x:Key="PrimaryHueLightBrush" Color="{StaticResource Primary200}" po:Freeze="True" />
+                        <SolidColorBrush x:Key="PrimaryHueLightForegroundBrush" Color="{StaticResource Primary200Foreground}" po:Freeze="True" />
+                        <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="{StaticResource Primary500}" po:Freeze="True" />
+                        <SolidColorBrush x:Key="PrimaryHueMidForegroundBrush" Color="{StaticResource Primary500Foreground}" po:Freeze="True" />
+                        <SolidColorBrush x:Key="PrimaryHueDarkBrush" Color="{StaticResource Primary700}" po:Freeze="True" />
+                        <SolidColorBrush x:Key="PrimaryHueDarkForegroundBrush" Color="{StaticResource Primary700Foreground}" po:Freeze="True" />
+                    </ResourceDictionary>
+                
+                <!-- secondary colour -->
                     <ResourceDictionary>
                         <!-- include your secondary pallette -->
                         <ResourceDictionary.MergedDictionaries>
-                            <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Yellow.xaml" />
-                        </ResourceDictionary.MergedDictionaries>
+                                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.LightBlue.Accent.xaml">
+                                </ResourceDictionary>
+                            </ResourceDictionary.MergedDictionaries>
 
                         <!-- include a single secondary accent color (and the associated forecolour) -->
-                        <SolidColorBrush x:Key="SecondaryAccentBrush" Color="{StaticResource Accent200}"/>
-                        <SolidColorBrush x:Key="SecondaryAccentForegroundBrush" Color="{StaticResource Accent200Foreground}"/>
+                        <SolidColorBrush x:Key="SecondaryAccentBrush" Color="{StaticResource Accent700}" po:Freeze="True" />
+                        <SolidColorBrush x:Key="SecondaryAccentForegroundBrush" Color="{StaticResource Accent700Foreground}" po:Freeze="True" />
+                            
                     </ResourceDictionary>
                     
                     <!-- Include the Dragablz Material Design style -->
@@ -52,14 +54,7 @@
 
                         </Setter>
                     </Style>
-                    <Style TargetType="{x:Type dragablz:TabablzControl}" x:Key="TabablzControlStyle">
-                        <Setter Property="ShowDefaultCloseButton" Value="True" />
-
-                        <Setter Property="ItemContainerStyle" Value="{StaticResource TrapezoidDragableTabItemStyle}" />
-                        <Setter Property="HeaderMemberPath" Value="Header" />
-
-                        <Setter Property="Margin" Value="0 5 0 0" />
-                    </Style>
+                    
                     <Style x:Key="MyWindowStyle" TargetType="Window">
                         <Setter Property="FontSize" Value="12" />
                         <Setter Property="FontFamily" Value="Arial" />
