--- a/src/Modules/MasterModule/Views/CommissionAgentInfoView.xaml
+++ b/src/Modules/MasterModule/Views/CommissionAgentInfoView.xaml
@@ -72,7 +72,7 @@
                     <Setter Property="Width" Value="100" />
                     <Setter Property="Height" Value="40" />
                     <Setter Property="FontFamily" Value="Arial"/>
-                    <Setter Property="Background" Value="CornflowerBlue" ></Setter>
+                    <Setter Property="Background" Value="MediumPurple" ></Setter>
                 </Style>
             </dragablz:TabablzControl.ItemContainerStyle>
             <dragablz:TabablzControl.InterTabController>
